--- a/client/partials/dashboard.html
+++ b/client/partials/dashboard.html
@@ -1,41 +1,35 @@
 <div class="row" ng-controller='dashboardController'>
 
 <!-- Filter products -->
-	<div class="three columns">
-		<br>
-		<form>
-			<input type='text' placeholder='search...' ng-model='filter'>
-		</form>
+	<div class="row">
+		<input type='text' placeholder='search...' ng-model='filter' class="input-sm product_search">
 	</div>
 
 <!-- get the products -->
-	<div class="nine columns" id='products'>
-		<br>
-		<div id='product' ng-repeat='product in products | filter: filter | limitTo: limitedProduct'>
-			<img ng-src="{{ product.image }}" alt='Image' id='product_image'>
-			<p ng-bind='product.name'></p>
+<!-- 	<div class="nine columns" id='products'>
+		<br> -->
+	<div class="col-md-4 portfolio-item" ng-repeat='product in products | filter: filter | limitTo: limitedProduct'>
+		<img ng-src="{{ product.image }}" alt='Image' class="img-responsive">
+		<p ng-bind='product.name'></p>
 <!-- grab amount of product stored in database -->
-			<p>(<span ng-bind='product.quantity'></span> left)</p>
-		</div>
-		<a href="" ng-click='showAllProducts()'>show more...</a>
-		<br>
+		<p>(<span ng-bind='product.quantity'></span> left)</p>
+	</div>
+	<button ng-click="showAllProducts()" class="show_more center-block btn-primary">show more</button>
+	<div class="row"></div>
 
 <!-- Get recent orders -->
-		<h5>Recent Orders</h5>
-		<div ng-repeat='order in orders | orderBy:"-created" | filter: filter | limitTo: limitedOrder'>
-			<p><span ng-bind='order.name' ng-model='filter'></span> purchased <span ng-bind='order.quantity'></span> <span ng-bind='order.product'></span>...</p>
-		</div>
-		<a href="" ng-click='showAllOrders()' id='show_more'>show more...</a>
-		<br>
+	<h4>Recent Orders</h4>
+	<div ng-repeat='order in orders | orderBy:"-created" | filter: filter | limitTo: limitedOrder'>
+		<p><span ng-bind='order.name' ng-model='filter'></span> purchased <span ng-bind='order.quantity'></span> <span ng-bind='order.product'></span>(s).</p>
+	</div>
+	<button ng-click="showAllOrders()" class="show_more btn-primary">show more</button>
+	<div class="row"></div>
 
 <!-- Get newest customers -->
-		<h5>Newest Customers</h5>
-		<div ng-repeat='customer in customers | orderBy:"-created" | filter: filter | limitTo: limitedCustomer '>
-			<p><span ng-bind='customer.name'></span> joined the store.</p>
-		</div>
-		<div class="row">
-			<a href="" ng-click='showAllCustomers()' id='show_more'>show more...</a>
-		</div>
-		<br>
+	<h4>Newest Customers</h4>
+	<div ng-repeat='customer in customers | orderBy:"-created" | filter: filter | limitTo: limitedCustomer '>
+		<p><span ng-bind='customer.name'></span> joined the store.</p>
 	</div>
+	<button ng-click="showAllCustomers()" class="show_more btn-primary">show more</button>
+	<div class="row"></div>
 </div>
