--- a/client/partials/orders.html
+++ b/client/partials/orders.html
@@ -1,23 +1,30 @@
 <div class="row" ng-controller='ordersController'>
-	<div class="row">
-		<h3>Add a new order</h3>
-		Customer Name:
-			<select ng-model='newOrder.name'>
-				<option ng-repeat='customer in customers | filter: filter_name'>{{ customer.name }}</option>
-			</select>
+	<div class="row form modal-body">
+		<form role="form" ng-submit="addOrder()">
+			<h4>Add a new order</h4>
+			<div class="form-group col-xs-8">
+		    	<label for="name">Customer Name:</label>
+		    	<select ng-model='newOrder.name' class="form-control input-sm">
+					<option ng-repeat='customer in customers | filter: filter_name'>{{ customer.name }}</option>
+				</select>
+		  	</div>
+		  	<div class="form-group col-xs-8">
+		    	<label for="phone">Product:</label>
+		    	<select ng-model='newOrder.product' class="form-control input-sm">
+					<option ng-repeat='product in products | filter: filter_order'>{{ product.name }}</option>
+				</select>
+		  	</div>
+		  	<div class="form-group col-xs-8">
+		    	<label for="email">Quantity:</label>
+		    	<input type='number' ng-model='newOrder.quantity' min='1' class="input-sm">
+		  	</div>
+		  	<div class="row"></div>
+		  	<button type="submit" class="btn btn-primary">Add new order</button>
+		</form>
 	</div>
 	<div class="row">
-		Order: <input type='number' ng-model='newOrder.quantity' min='1' max='99'>
-		<select ng-model='newOrder.product'>
-			<option ng-repeat='product in products | filter: filter_name'>{{ product.name }}</option>
-		</select>
-	</div>
-	<div class="row">
-		<input type='submit' value='Order' ng-click='addOrder()'>
-	</div>
-	<div class="row">
-		<input type='text' placeholder='filter...' ng-model='filter_name'>
-		<table>
+		<input type="text" placeholder="search order..." ng-model="filter_order" class="input-sm product_search">
+		<table class="table table-striped">
 			<thead>
 				<th>Customer Name</th>
 				<th>Product</th>
