--- a/client/css/mini-store.css
+++ b/client/css/mini-store.css
@@ -59,6 +59,7 @@ hr {
 
 footer {
     margin: 50px 0;
+    text-align: center;
 }
 
 @media screen and (min-width:768px) {
@@ -144,9 +145,10 @@ button {
 
 .input-sm {
     margin-bottom: 10px;
+    margin-left: 10px
 }
 
-.show_more {
+.show_more, .show_more_customers, .show_more_orders, .show_more_products {
     font-size: 15px;
     margin-bottom: 40px;
 }
