--- a/client/partials/customers.html
+++ b/client/partials/customers.html
@@ -24,7 +24,7 @@
 	</div>
 	<div class="row">
 		<input type="text" placeholder="search name..." ng-model="filter_name" class="input-sm">
-		<table class="table table-striped">
+		<table class="table-striped table">
 			<thead>
 				<th>Customer Name</th>
 				<th>Email Address</th>
